# ipy-compare

./: README.md  example.ipynb  license.md  pyproject.toml
.github/workflows/: python-publish.yml
ipy_compare/: __init__.py  brand.py  panel.py
tests/: test_compare.py
