[tool.poetry]
name = "ipy-compare"
version = "0.1.0"
description = ""
authors = ["patrick o'leary <pjaol@pjaol.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
ipython = "^8.30.0"
ipywidgets = "^8.1.5"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.3.3"
pytest = "^8.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"


[tool.poetry-dynamic-versioning]
enable = true
[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
