[tool.poetry]
name = "ipy-compare"
version = "0.0.0"
description = ""
authors = ["patrick o'leary <pjaol@pjaol.com>"]
readme = "README.md"
repository = "https://github.com/thevgergroup/ipy-compare"
homepage = "https://github.com/thevgergroup/ipy-compare"
keywords = ["data", "analysis", "visualization", "pandas", "ipython", "panel", "google-colab", "jupyterlab"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "2.2.2"  # Match Colab's compatible pandas version
ipython = "^8.10.0"  # Updated to fix CVE-2023-24816 (command injection vulnerability)
panel = "^1.3.1"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.3.3"
pytest = "^8.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"


[tool.poetry-dynamic-versioning]
enable = true
[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
